toch nog een stukje verder gekomen
verhaal over waarom geen grafting, maar een tweede 'head'

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Case decomposition}
+\chapter{Case decomposition}\label{ch:decomposition}
 
 At the beginning of the previous chapter I showed that the case scale \tsc{nom < acc < dat} appears in headless relatives. In most accounts for headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives simply obey to that hierarchy. \pgcitet{pittner1995}{201:fn.4} makes this explicit: ``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.''
 
