--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -484,7 +484,7 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
      \node[] at (1.375,0) {\footnotesize{● Basque}};
    \end{tikzpicture}
    \caption{Relativization hierarchy with languages}
-   \label{fig:rel-sub-do-io}
+   \label{fig:rel-sub-do-io-lang}
  \end{figure}
 
 \citet{caha2009} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. The main argument comes from ergative-absolutive languages, which was also one of \posscitet{bobaljik2006} argument with the implicational hierarchy for agreement.
