--- a/variation.tex
+++ b/variation.tex
@@ -45,7 +45,7 @@ The crucial difference with I'm doing is that I'm not relying on an arbitrary va
   \center
   \caption{Summary Gothic headless relatives (repeated)}
     \input{tables/gothic-summary.tex}
-    \label{tbl:summary-gothic-simple}
+    \label{tbl:summary-gothic-repeated}
 \end{table}
 
 
@@ -65,7 +65,7 @@ Examples in which the internal case is accusative, the external case is dative a
 
 \exg. Bis tú nu {zi wáre} furira Ábrahame ? ouh thén man hiar nu zálta\\
  sein du nun,jetzt wahrlich erhabener,wertvoller Abraham ? auch,und der,die,das man hier nun,jetzt erzählen,verkünden\\
- `xxx' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
+ `xxx' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc-rep}
 
 
 Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
