beetje ohg voorbeelden

--- a/relativization.tex
+++ b/relativization.tex
@@ -137,8 +137,29 @@ So, Polish has an `out', which German does not have.
 
 What is this external element? This is the external head, that actually shows up in some languages: double-headed relative clauses.
 
+\exg. doü adiyano-no \tbf{doü} deyalukhe\\
+ sago give.3\tsc{pl}.\tsc{nonfut}-\tsc{conn} sago finished.\tsc{ajd}\\
+ `The sago that they gave is finished.' \flushfill{Kombai, Dryer 2005}
+
+\exg. gana gu fali-kha \tbf{ro} na-gana-y-a\\
+ {bush knife} 2\tsc{sg} carry-go.\tsc{2sg}.\tsc{nonfut} my-{bush knife}-\tsc{tr-pred}\\
+ `The bush knife that you took away, is my bush knife.'
+
+\exg. yare gamo khereja bogi-n-o \tbf{rumu} na-momof-a\\
+ {old man} join.\tsc{ss} work \tsc{dur}.do.\tsc{3sg}.\tsc{nf}-\tsc{tr}-\tsc{conn} person my-uncle-\tsc{pred}\\
+ `The old man who is joining the work is my uncle.'
 
 
+\ex.
+\ag. Junya-wa[Ayaka-gamui-taringo]-otabe-ta.\\
+ Junya-topAyaka-nompeel-pastapple-acceat-past\\
+ ‘Junya ate the apples that Ayaka peeled.’
+\bg. Junya-wa[Ayaka-garingo-omui-ta-no]-otabe-ta.\\
+ Junya-topAyaka-nomapple-accpeel-past-no-acceat-past\\
+ literally ‘Junya ate [that Ayaka peeled apples].’
+\bg. Junya-wa[Ayaka-garingo-omui-tasono-ringo]-otabe-ta.\\
+ Junya-topAyaka-nomapple-accpeel-pastthat-apple-acceat-past\\
+ literally ‘Junya ate [those apples that Ayaka peeled apples].’
 
 
 \tit{as} is deleted because it cannot surface on its own? why not?
