--- a/stuff.tex
+++ b/stuff.tex
@@ -280,8 +280,30 @@ nicht.seinIND.PRES.SG.3	derMASC.SG.DAT	Schmerz,Leid,Kummer,Unglück;SG.NOM Böse
 
 %%%%%
 
+internal: nom, external: acc?
+
  enti	gachaufta	den	Auh	ist	galiih	himilo	rihhi	seginun	in	seu	gasezziteru
  und	kaufenIND.PAST.SG.3		derMASC.SG.ACC		auch	seinIND.PRES.SG.3	gleich	HimmelPOS.PL.GEN	ReichSG.NOM		NetzSG.DAT		in	SeeSG.ACC		setzenP.POS.FEM.SG.DAT.ST
+
+%%%%%
+
+acc-acc
+
+séhet	then	ih	kússe
+see whom I kiss
+Otfr.Ev.4.16
+
+%%%%
+
+nom-acc
+
+thoh	bín	ih	then	ir	súachet
+toch bin ik wa't sy sykje
+Otfr.Ev.4.16
+
+%%%%
+
+
 
 \phantom{x}
 
