--- a/variation.tex
+++ b/variation.tex
@@ -11,18 +11,18 @@ There are languages in which the external case always surfaces, no matter the in
 Another possibility that is attested is that none of the case can win, that only matching cases give a winner. I summarize this in a table:
 
 \begin{table}[H]
-	\center
-	\caption {Variation}
-		\begin{tabular}{ccc}
-		\toprule
-		 					& \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	\\
-								\cmidrule{2-3}
-		Gothic OHG		&	✔										&	✔									\\
-		\ac{mg} 	& ✔			 							&	*									\\
-		n.a.    	& *										&	✔									\\
+ \center
+ \caption {Variation}
+  \begin{tabular}{ccc}
+  \toprule
+        & \ac{int}>\ac{ext}  & \ac{ext}>\ac{int} \\
+        \cmidrule{2-3}
+  Gothic OHG  & ✔          & ✔         \\
+  \ac{mg}  & ✔           & *         \\
+  n.a.     & *          & ✔         \\
     Polish    & *                   & *                 \\
-		\bottomrule
-		\end{tabular}
+  \bottomrule
+  \end{tabular}
 \end{table}
 
 Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
@@ -78,10 +78,6 @@ Examples in which the internal case is nominative, the external case is dative a
 he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
 `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
-\exg. gébe themo	ni	éigi\\
-gebenSUBJ.PRES.SG.3	derMASC.SG.DAT	nicht	haben,besitzenSUBJ.PRES.SG.3\\
-`' \flushfill{\ac{ohg}, \ac{otfrid}}
-
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
@@ -91,42 +87,36 @@ Examples in which the internal case is nominative, the external case is accusati
 
 
 \exg. ``Ih bibringu fona iacobes samin endi fona iuda dhen mina berga chisitzit.''\\
-ich.SG.NOM.1 hervorbringen.IND.PRES.SG.1 von Jakob.SG.GEN Samuel.SG.DAT und von Judas.SG.ABL \tsc{rel.}MASC.SG.ACC mein.MASC.PL.ACC.ST Berg.PL.ACC besitzen.IND.PRES.SG.3\\
-`' \flushfill{\ac{ohg}, \ac{isid} 34:3}\label{ex:ohg-acc-nom}
+1\tsc{sg}.\tsc{nom} create.\tsc{1sg} from Jakob.\tsc{gen} Samuel.\tsc{dat} and from Judas.\tsc{abl} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} my.\tsc{acc}.\tsc{m}.\tsc{pl} mountain.\tsc{acc}.\tsc{pl} possess.3\tsc{sg}\\
+`I create from Samuel of Jakob and from Judas him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3, adapted from \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
+%maybe there is an alternative
 
-\exg. ih bibringu fona (iacobes samin endi) Iuda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
-I {bring to light}\scsub{[acc]} about (Jacob together end?) Judas \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
-`I bright to light the one who wanders through my mountains about Jacob and end of Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom1}
-
+`I bright to light the one who wanders through my mountains about Jacob and end of Judas'
 
 
 Internal wins.
 
 internal: acc, external: nom
 
-\exg. thíz	ist	then	sie	zéllent	joh	then	sie	sláhan	wollent	!\\
-diesesNEUT.SG.NOM	seinIND.PRES.SG.3	derMASC.SG.ACC	MASC.PL.NOM.3	erzählenIND.PRES.PL.3		und	derMASC.SG.ACC	MASC.PL.NOM.3	töten	wollenIND.PRES.PL.3\\
-
-\exg. Thiz ist [then sie zellent].\\
- this is whom(ACC) they talk\\
- `This is the one whom they talk about.' \flushfill{\ac{ohg}, ?}
+\exg. thíz ist \tbf{then sie zéllent} joh \tbf{then sie sláhan wollent}!\\
+this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]} and \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} kill\scsub{[acc]} want.\tsc{3pl}\\
+`This is the one whom they talk about and whom they want to kill.' \flushfill{\ac{ohg}, ?}
 
 
 
 internal: dat, external: nom
 
-\exg. themo	min	uuirdit	forlazan	,	min	minnot\\
-dieser, der(selbe); diese, die; dieses, das; wer, welcher; welche; was, welches	weniger, minder	werden	erlassen, vergeben, erlauben		weniger, minder	(eifersüchtig) lieben, schätzen\\
-`Aan wie minder wordt voorgelezen, heeft minder lief.'
-
+\exg. \tbf{themo min uuirdit forlazan}, min minnot\\
+\tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become\scsub{[dat]} read less love\scsub{[nom]}\\
+`To whom less is read, loves less.'
 
 
 
 \footnote{
 COUNTEREXAMPLE: int: nom, ext: acc
 
-\exg. tház	si	uns	béran	scolti	thér	unsih	gihéilti\\
-dass	sieFEM.SG.NOM.3	wirPL.DAT.1	(hervor)bringen,gebären	sollen,werdenSUBJ.PAST.SG.3	derMASC.SG.NOM	wirPL.ACC.1	rettenSUBJ.PAST.SG.3\\
+\exg. tház si uns béran scolti thér unsih gihéilti\\
+dass sieFEM.SG.NOM.3 wirPL.DAT.1 (hervor)bringen,gebären sollen,werdenSUBJ.PAST.SG.3 derMASC.SG.NOM wirPL.ACC.1 rettenSUBJ.PAST.SG.3\\
  `xxx' \flushfill{\ac{ohg}, \ac{otfrid}}
 
  \phantom{x}
@@ -202,30 +192,30 @@ To summarize
 \begin{table}[H]
   \center
   \caption{Summary Modern German headless relatives}
-		\begin{tabular}{c|c|c|c}
-		  \toprule
-			\textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
-		        & [\ac{nom}]
-		        & [\ac{acc}]
-		        & [\ac{dat}]
-		        \\ \cmidrule{1-4}
-		    [\ac{nom}]
-		        &
-		        &
-		        &
-		        \\ \cmidrule{1-4}
-		    [\ac{acc}]
-		        & \ac{acc}
-		        &
-		        &
-		        \\ \cmidrule{1-4}
-		    [\ac{dat}]
-		        & \ac{dat}
-		        & \ac{dat}
-		        &
-		        \\
-		  \bottomrule
-		\end{tabular}
+  \begin{tabular}{c|c|c|c}
+    \toprule
+   \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+          & [\ac{nom}]
+          & [\ac{acc}]
+          & [\ac{dat}]
+          \\ \cmidrule{1-4}
+      [\ac{nom}]
+          &
+          &
+          &
+          \\ \cmidrule{1-4}
+      [\ac{acc}]
+          & \ac{acc}
+          &
+          &
+          \\ \cmidrule{1-4}
+      [\ac{dat}]
+          & \ac{dat}
+          & \ac{dat}
+          &
+          \\
+    \bottomrule
+  \end{tabular}
 \end{table}
 
 
@@ -267,55 +257,55 @@ This will be intuition later
 
 
 \begin{table}[H]
-	\center
-	\caption {Relative pronouns in headless relatives in \ac{mg}}
-		\begin{tabular}{ccc}
-		\toprule
-							& \ac{inan}	& \ac{an}	\\
-								\cmidrule{2-3}
-    \ac{nom} 	& w-as    	& w-er   	\\
-    \ac{acc} 	& w-as    	& w-en  	\\
-    \ac{dat} 	& -  				& w-em   	\\
-		\bottomrule
-		\end{tabular}
+ \center
+ \caption {Relative pronouns in headless relatives in \ac{mg}}
+  \begin{tabular}{ccc}
+  \toprule
+       & \ac{inan} & \ac{an} \\
+        \cmidrule{2-3}
+    \ac{nom}  & w-as     & w-er    \\
+    \ac{acc}  & w-as     & w-en   \\
+    \ac{dat}  & -      & w-em    \\
+  \bottomrule
+  \end{tabular}
 \end{table}
 
 \begin{table}[H]\label{tbl:paradigmohg}
-	\center
-	\caption {Relative pronouns in headless relatives in \ac{ohg}}
-		\begin{tabular}{cccc}
-		\toprule
-							& \ac{n}.\ac{sg}	& \ac{m}.\ac{sg}  & \ac{f}.\ac{sg}	\\
-								\cmidrule{2-4}
-		\ac{nom}	& d-aȥ          	& d-ër       			& d-iu						\\
-		\ac{acc}	& d-aȥ   					& d-ën						& d-ea/-ia/(-ie)	\\
-		\ac{dat}	& d-ëmu/-ëmo	    & d-ëmu/-ëmo			& d-ëru/-ëro			\\
-		\bottomrule
-	    				& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}  	& \ac{f}.\ac{pl}	\\
-	    					\cmidrule{2-4}
-    \ac{nom} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
-    \ac{acc} 	& d-iu/-ei   			&  d-ē/-ea/-ia/-ie	& d-eo/-io        \\
-    \ac{dat} 	& d-ēm/-ēn   			&  d-ēm/-ēn       	& d-ēm/-ēn        \\
+ \center
+ \caption {Relative pronouns in headless relatives in \ac{ohg}}
+  \begin{tabular}{cccc}
+  \toprule
+       & \ac{n}.\ac{sg} & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg} \\
+        \cmidrule{2-4}
+  \ac{nom} & d-aȥ           & d-ër          & d-iu      \\
+  \ac{acc} & d-aȥ        & d-ën      & d-ea/-ia/(-ie) \\
+  \ac{dat} & d-ëmu/-ëmo     & d-ëmu/-ëmo   & d-ëru/-ëro   \\
+  \bottomrule
+         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl}   & \ac{f}.\ac{pl} \\
+          \cmidrule{2-4}
+    \ac{nom}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{acc}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{dat}  & d-ēm/-ēn      &  d-ēm/-ēn        & d-ēm/-ēn        \\
     \bottomrule
-		\end{tabular}
+  \end{tabular}
 \end{table}
 
 \begin{table}[H]
-	\center
-	\caption {Relative pronouns in headless relatives in Gothic}
-		\begin{tabular}{cccc}
-		\toprule
-							& \ac{n}.\ac{sg} 	& \ac{m}.\ac{sg}	& \ac{f}.\ac{sg}  \\
-		 						\cmidrule{2-4}
-    \ac{nom} 	& þ-at-ei 	 			& s-a-ei 					& s-ō-ei					\\
-    \ac{acc}	& þ-at-ei    			& þ-an-ei  				& þ-ō-ei  				\\
-    \ac{dat} 	& þ-amm-ei 				& þ-amm-ei				& þ-izái-ei 			\\
-		\bottomrule
-    					& \ac{n}.\ac{pl}	& \ac{m}.\ac{pl}	& \ac{f}.\ac{pl}	\\
-						    \cmidrule{2-4}
-    \ac{nom} 	& þ-ō-ei					&	þ-ái-ei					&	þ-ōz-ei					\\
-    \ac{acc} 	& þ-ō-ei 					&	þ-anz-ei				&	þ-ōz-ei					\\
-    \ac{dat} 	& þ-áim-ei				&	þ-áim-ei 				&	þ-áim-ei 				\\
+ \center
+ \caption {Relative pronouns in headless relatives in Gothic}
+  \begin{tabular}{cccc}
+  \toprule
+       & \ac{n}.\ac{sg}  & \ac{m}.\ac{sg} & \ac{f}.\ac{sg}  \\
+         \cmidrule{2-4}
+    \ac{nom}  & þ-at-ei      & s-a-ei      & s-ō-ei     \\
+    \ac{acc} & þ-at-ei       & þ-an-ei      & þ-ō-ei      \\
+    \ac{dat}  & þ-amm-ei     & þ-amm-ei    & þ-izái-ei    \\
+  \bottomrule
+         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl} & \ac{f}.\ac{pl} \\
+          \cmidrule{2-4}
+    \ac{nom}  & þ-ō-ei     & þ-ái-ei     & þ-ōz-ei     \\
+    \ac{acc}  & þ-ō-ei      & þ-anz-ei    & þ-ōz-ei     \\
+    \ac{dat}  & þ-áim-ei    & þ-áim-ei     & þ-áim-ei     \\
     \bottomrule
-		\end{tabular}
+  \end{tabular}
 \end{table}
