--- a/variation.tex
+++ b/variation.tex
@@ -78,6 +78,9 @@ Examples in which the internal case is nominative, the external case is dative a
 he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
 `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
+Enti	aer	ant	uurta	demo	zaimo	sprah
+und	er, sie, es	antworten	der, die, das	zu	er, sie, es	sprechen, reden, sagen
+MASC_SG_NOM_3	IND_PAST_SG_3	MASC_SG_DAT		MASC_SG_DAT_3	IND_PAST_SG_3
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
