--- a/variation.tex
+++ b/variation.tex
@@ -80,7 +80,7 @@ he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub
 
 Enti	aer	ant	uurta	demo	zaimo	sprah
 und	er, sie, es	antworten	der, die, das	zu	er, sie, es	sprechen, reden, sagen
-MASC_SG_NOM_3	IND_PAST_SG_3	MASC_SG_DAT		MASC_SG_DAT_3	IND_PAST_SG_3
+MASC.SG.NOM.3	IND.PAST.SG.3	MASC.SG.DAT		MASC.SG.DAT.3	IND.PAST.SG.3
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
