added last missing example
o ja

--- a/variation.tex
+++ b/variation.tex
@@ -67,7 +67,6 @@ Examples in which the internal case is accusative, the external case is dative a
  sein du nun,jetzt wahrlich erhabener,wertvoller Abraham ? auch,und der,die,das man hier nun,jetzt erzählen,verkünden\\
  `xxx' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc-rep}
 
-
 Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
 The internal case is nominative. The predicate \tit{sprah} `spoke' takes nominative subjects.
 The external case is dative. The predicate \tit{antuurta} `replied' takes dative objects.
@@ -113,6 +112,17 @@ internal: dat, external: nom
 \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} less become\scsub{[dat]} read less love\scsub{[nom]}\\
 `To whom less is read, loves less.'
 
+
+internal: dat, external: acc
+
+Themo	avur	tház	ni	gidúat	,	quimit	séragaz	muat	,	joh	wónot	inan	úbari	gotes	ábulgi	!
+dieser, der(selbe); diese, die; dieses, das	aber, (je)doch, dagegen	dieser, der(selbe); diese, die; dieses, das	nicht	tun, machen		kommen, (her)ankommen, zurück-	traurig, betrübt	Seele, Herz, Gemüt		und, auch	wohnen, sich befinden	er, sie, es	über	Gott	(Jäh)zorn
+MASC.SG.DAT		NEUT.SG.ACC		IND.PRES.SG.3		IND.PRES.SG.3	POS.NEUT.SG.NOM.ST	SG.NOM			IND.PRES.SG.3	MASC.SG.ACC.3		SG.GEN	SG.NOM
+
+Otfr.Ev.2.13.37
+
+eerst rel, dan mc
+seele = nom
 
 
 \footnote{
